# pokemon-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/clients/: pokeapi_client.py
app/core/: config.py  database.py  exceptions.py  exceptions_handlers.py  logger.py  logging_middleware.py  redis.py  security.py
app/models/: pokemon.py
app/routes/: pokemon_router.py
app/schemas/: pokemon.py  pokemon_schema.py
app/services/: pokemon_db_service.py  pokemon_service.py
app/utils/: pagination.py
tests/: conftest.py  test_pokemon_db.py  test_router.py  test_routes.py  test_services.py
